--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="zanni - 프로필" />
         <meta property="og:description" content="웨이트를 좋아하는, 평범한 직장인" />
         <meta property="og:image" content="1028.jpg" />
-        <title>르탄이 - 프로필 링크</title>
+        <title>zanni - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
             * {
